# mobile-app-test-automation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: android-ui.yml
config/: devices.yaml
src/expense_automation/: __init__.py  config.py  data.py  models.py
src/expense_automation/components/: __init__.py  app_lifecycle.py  category_picker.py  confirmation_dialog.py
src/expense_automation/pages/: __init__.py  base.py  expense_form.py  expenses.py  login.py
src/expense_automation/utils/: __init__.py  diagnostics.py
sut/: gradlew  gradlew.bat  settings.gradle.kts
sut/app/: build.gradle.kts  proguard-rules.pro
sut/app/src/main/: AndroidManifest.xml
sut/app/src/main/java/com/example/expenseautomationsut/: Expense.kt  ExpenseAdapter.kt  ExpenseFormActivity.kt  ExpensesActivity.kt  LoginActivity.kt  SessionStore.kt
sut/app/src/main/res/layout/: activity_expense_form.xml  activity_expenses.xml  activity_login.xml  item_expense.xml
sut/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
tests/: __init__.py  test_auth.py  test_e2e.py  test_expenses.py
