[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "expense-mobile-automation"
version = "1.0.0"
description = "UI-автотесты Android-приложения учёта расходов на Appium"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nikita Samilovsky" }]
dependencies = [
  "Appium-Python-Client>=4.5,<6",
  "allure-pytest>=2.13,<3",
  "PyYAML>=6.0,<7",
  "pytest>=8.3,<9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: критический короткий набор проверок",
  "regression: полный регрессионный набор",
  "auth: сценарии авторизации и выхода",
  "e2e: связный пользовательский сценарий",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["expense_automation"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/expense_automation"]
